--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -27,10 +27,23 @@ jobs:
   validate-k8s-targets:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out repository
+        uses: actions/checkout@v3
       - name: run comparison
         run: |
           git show origin/$GITHUB_BASE_REF:CODEOWNERS
           . .github/workflows/scripts/diff.sh
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@13d241b293754004c80624b5567555c4a39ffbe3
+        env:
+          AWS_REGION: "us-east-1"
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-region: us-east-1
+          role-to-assume: arn:aws:iam::047313371957:role/root-vault-v2-slm-service-account-role
+          role-skip-session-tagging: true
+          role-duration-seconds: 1200
       - name: validate-targets
         if: ${{ env.should_update == 'true' }}
         uses: zyzlik/AdKS@PROJ-2
