--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -29,9 +29,9 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
-      - name: run comparison
+      - name: Run comparison
         run: |
-          git show origin/$GITHUB_BASE_REF:CODEOWNERS
+          #git show origin/$GITHUB_BASE_REF:CODEOWNERS
           . .github/workflows/scripts/diff.sh
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@13d241b293754004c80624b5567555c4a39ffbe3
