--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -29,6 +29,8 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Run comparison
         run: |
           . .github/workflows/scripts/diff.sh
