--- a/test.yaml
+++ b/test.yaml
@@ -14,6 +14,7 @@ secrets:
     targets:
     - kubernetes:
         name: test-secret-object
+        account_role: arn:aws:iam::801176112578:role/AdKSServiceAccountRole
         data_field: password
         namespace:
         - test
