--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,9 +22,6 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
         aws-region: ${{ env.AWS_REGION }}
-        role-to-assume: arn:aws:iam::801176112578:role/AdKSServiceAccountRole
-        role-skip-session-tagging: true
-        role-duration-seconds: 1200
     - name: Check out repository code
       uses: actions/checkout@v2
     - name: Intake
@@ -34,7 +31,7 @@ jobs:
         secret-file: "test.yaml"
         intake-reader-role-arn: arn:aws:iam::801176112578:role/AdKSServiceAccountRole
         vault-writer-role-arn: arn:aws:iam::801176112578:role/AdKSServiceAccountRole
-        vault-kms-key-arn: arn:aws:iam::801176112578:role/AdKSServiceAccountRole
+        vault-kms-key-arn: arn:aws:kms:us-east-1:801176112578:key/43097f57-8a02-460d-ab33-60f0d8ac22cc
     - name: Deliver
       uses: zyzlik/AdKS@PROJ-3
       with:
